assets/css/style.css
/* ... */
.back-to-top i {
  font-size: 28px;
  color: #fff;
  line-height: 0;
}
.back-to-top:hover {
  background: #F09143;
  color: #fff;
}
.back-to-top.active {
  visibility: visible;
  opacity: 1;
}


/* WhatsApp button */
.whatsapp {
  position: fixed;
  display: none;
  display: inline-block;
  line-height: 1;
  left: 90px;
  bottom: 10px;
  transition: background 0.5s;
  z-index: 11;
}
/* Designed & Developed by Shashi G Kiran (shashigkiran@gmail.com) */
.whatsapp i {
  padding-top: 6px;
  color: #fff;
}

@media (max-width: 768px) {
  .whatsapp {
    bottom: 13px;
    left: 90px;
  }
}



/* Call button */
.call {
  position: fixed;
  display: none;
  display: inline-block;
  line-height: 1;
  left: 30px;
  bottom: 18px;
  transition: background 0.5s;
  z-index: 11;
}
/* Designed & Developed by Shashi G Kiran (shashigkiran@gmail.com) */
.call i {
  padding-top: 6px;
  color: #fff;
}

@media (max-width: 768px) {
  .call {
    bottom: 23px;
    left: 30px;
  }
}


/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#header {
  background: rgba(255, 255, 255);
  transition: all 0.5s;
  z-index: 997;
  height: 90px;
}

#header .logo {
  font-size: 28px;
  margin: 0;
  padding: 0;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 1px;
  text-transform: uppercase;
}
#header .logo a {
  color: #fff;
}
#header .logo img {
  max-height: 70px;
}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/**
* Desktop Navigation 
*/
.navbar {
  padding: 0;
}
.navbar ul {
  margin: 0;
  padding: 0;
  display: flex;
  list-style: none;
  align-items: center;
}
.navbar li {
  position: relative;
}
.navbar > ul > li {
  white-space: nowrap;
  padding: 10px 0 10px 22px;
}
.navbar a, .navbar a:focus {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 4px;
  font-family: "Roboto", sans-serif;
  font-size: 14px;
  font-weight: 500;
  color: rgba(0, 95, 136);
  white-space: nowrap;
  transition: 0.3s;
  text-transform: uppercase;
  position: relative;
}
.navbar a i, .navbar a:focus i {
  font-size: 12px;
  line-height: 0;
  margin-left: 5px;
}
.navbar > ul > li > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -6px;
  left: 0;
  background-color: #005F88;
  visibility: hidden;
  width: 0px;
  transition: all 0.3s ease-in-out 0s;
}
.navbar a:hover:before, .navbar li:hover > a:before, .navbar .active:before {
  visibility: visible;
  width: 100%;
}
.navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
  color: #F09143;
}
.navbar .getstarted, .navbar .getstarted:focus {
  padding: 8px 25px;
  margin-left: 12px;
  border-radius: 4px;
  color: #fff;
  font-weight: 400;
  font-family: "Poppins", sans-serif;
  border: 2px solid #F09143;
  background: #005F88;
}
.navbar .getstarted:hover, .navbar .getstarted:focus:hover {
  color: #fff;
  background: #F09143;
  border: 2px solid #005F88;
}
.navbar .getstarted:hover:before, .navbar li:hover > .getstarted:before {
  visibility: hidden;
}
.navbar .dropdown ul {
  display: block;
  position: absolute;
  left: 22px;
  top: calc(100% + 30px);
  margin: 0;
  padding: 10px 0;
  z-index: 99;
  opacity: 0;
  visibility: hidden;
  background: #fff;
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
  transition: 0.3s;
}
.navbar .dropdown ul li {
  min-width: 200px;
}
.navbar .dropdown ul a {
  padding: 10px 20px;
  font-size: 14px;
  font-weight: 500;
  text-transform: none;
  color: #2a2a2a;
}
.navbar .dropdown ul a i {
  font-size: 12px;
}
.navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
  color: #005F88;
}
.navbar .dropdown:hover > ul {
  opacity: 1;
  top: 100%;
  visibility: visible;
}
.navbar .dropdown .dropdown ul {
  top: 0;
  left: calc(100% - 30px);
  visibility: hidden;
}
.navbar .dropdown .dropdown:hover > ul {
  opacity: 1;
  top: 0;
  left: 100%;
  visibility: visible;
}
@media (max-width: 1366px) {
  .navbar .dropdown .dropdown ul {
    left: -90%;
  }
  .navbar .dropdown .dropdown:hover > ul {
    left: -100%;
  }
}

/**
* Mobile Navigation 
*/
.mobile-nav-toggle {
  color: #005F88;
  font-size: 28px;
  cursor: pointer;
  display: none;
  line-height: 0;
  transition: 0.5s;
}
.mobile-nav-toggle.bi-x {
  color: #005F88;
}

@media (max-width: 991px) {
  .mobile-nav-toggle {
    display: block;
  }

  .navbar ul {
    display: none;
  }
}
.navbar-mobile {
  position: fixed;
  overflow: hidden;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: rgba(17, 17, 17, 0.9);
  transition: 0.3s;
  z-index: 999;
}
.navbar-mobile .mobile-nav-toggle {
  position: absolute;
  top: 15px;
  right: 15px;
}
.navbar-mobile ul {
  display: block;
  position: absolute;
  top: 55px;
  right: 15px;
  bottom: 15px;
  left: 15px;
  padding: 10px 0;
  background-color: #fff;
  overflow-y: auto;
  transition: 0.3s;
}
.navbar-mobile a, .navbar-mobile a:focus {
  padding: 10px 20px;
  font-size: 15px;
  color: #2a2a2a;
}
.navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
  color: #005F88;
}
.navbar-mobile > ul > li {
  white-space: nowrap;
  padding: 0;
}
.navbar-mobile a:hover:before, .navbar-mobile li:hover > a:before, .navbar-mobile .active:before {
  visibility: hidden;
}
.navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
  margin: 15px;
  color: #005F88;
  padding-left: 15px;
}
.navbar-mobile .dropdown ul {
  position: static;
  display: none;
  margin: 0;
  padding: 0;
  z-index: 99;
  opacity: 1;
  visibility: visible;
  background: #fff;
  box-shadow: none;
}
.navbar-mobile .dropdown ul li {
  margin: 0;
  padding: 0;
  min-width: auto;
}
.navbar-mobile .dropdown ul a {
  padding: 8px 0 8px 20px;
}
.navbar-mobile .dropdown ul a i {
  font-size: 12px;
}
/* ... */

